SONAR-17075 Fix language pages menu entry display when text is too long

--- a/server/sonar-web/src/main/js/app/styles/components/list-groups.css
+++ b/server/sonar-web/src/main/js/app/styles/components/list-groups.css
@@ -76,6 +76,8 @@ a.list-group-item {
 .list-group-item-heading {
   margin-top: 5px;
   margin-bottom: 5px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .list-group-item-heading:after {
